// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm renders initial state 1`] = `
<div>
  <h2
    class="font-poppins text-2xl font-bold text-agrisas-dark mb-6"
  >
    Iniciar sesión
  </h2>
  <form
    class="flex flex-col gap-4"
    novalidate=""
  >
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="text-label-lg text-on-surface-variant"
        for="email"
      >
        Correo electrónico
      </label>
      <input
        aria-invalid="false"
        autocomplete="email"
        class="w-full rounded border border-outline bg-surface-container-lowest px-3 py-2 text-body-md text-on-surface focus:outline-none focus:ring-2 disabled:bg-surface-container disabled:cursor-not-allowed disabled:opacity-60 transition-colors duration-150 focus:ring-agrisas-medium focus:border-agrisas-medium"
        id="email"
        name="email"
        type="email"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="text-label-lg text-on-surface-variant"
        for="password"
      >
        Contraseña
      </label>
      <input
        aria-invalid="false"
        autocomplete="current-password"
        class="w-full rounded border border-outline bg-surface-container-lowest px-3 py-2 text-body-md text-on-surface focus:outline-none focus:ring-2 disabled:bg-surface-container disabled:cursor-not-allowed disabled:opacity-60 transition-colors duration-150 focus:ring-agrisas-medium focus:border-agrisas-medium"
        id="password"
        name="password"
        type="password"
        value=""
      />
    </div>
    <button
      aria-busy="false"
      class="inline-flex items-center justify-center gap-2 font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed px-4 py-2 text-label-lg w-full mt-2 rounded bg-agrisas-dark text-agrisas-mint hover:bg-agrisas-medium"
      type="submit"
    >
      Ingresar
    </button>
  </form>
  <p
    class="mt-4 text-center text-sm text-gray-600"
  >
    ¿No tienes cuenta?
     
    <a
      href="/auth/register"
    >
      Regístrate aquí
    </a>
  </p>
</div>
`;

exports[`LoginForm renders with formError 1`] = `
<div>
  <h2
    class="font-poppins text-2xl font-bold text-agrisas-dark mb-6"
  >
    Iniciar sesión
  </h2>
  <form
    class="flex flex-col gap-4"
    novalidate=""
  >
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="text-label-lg text-on-surface-variant"
        for="email"
      >
        Correo electrónico
      </label>
      <input
        aria-invalid="false"
        autocomplete="email"
        class="w-full rounded border border-outline bg-surface-container-lowest px-3 py-2 text-body-md text-on-surface focus:outline-none focus:ring-2 disabled:bg-surface-container disabled:cursor-not-allowed disabled:opacity-60 transition-colors duration-150 focus:ring-agrisas-medium focus:border-agrisas-medium"
        id="email"
        name="email"
        type="email"
        value="bad@email.com"
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="text-label-lg text-on-surface-variant"
        for="password"
      >
        Contraseña
      </label>
      <input
        aria-invalid="false"
        autocomplete="current-password"
        class="w-full rounded border border-outline bg-surface-container-lowest px-3 py-2 text-body-md text-on-surface focus:outline-none focus:ring-2 disabled:bg-surface-container disabled:cursor-not-allowed disabled:opacity-60 transition-colors duration-150 focus:ring-agrisas-medium focus:border-agrisas-medium"
        id="password"
        name="password"
        type="password"
        value="123"
      />
    </div>
    <p
      class="text-sm text-red-500"
      role="alert"
    >
      Credenciales inválidas
    </p>
    <button
      aria-busy="false"
      class="inline-flex items-center justify-center gap-2 font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed px-4 py-2 text-label-lg w-full mt-2 rounded bg-agrisas-dark text-agrisas-mint hover:bg-agrisas-medium"
      type="submit"
    >
      Ingresar
    </button>
  </form>
  <p
    class="mt-4 text-center text-sm text-gray-600"
  >
    ¿No tienes cuenta?
     
    <a
      href="/auth/register"
    >
      Regístrate aquí
    </a>
  </p>
</div>
`;
